# ESP32S3-LCD-7B-AGRIBANK-DEMO-2

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/lvgl_port/: CMakeLists.txt
components/touch/: touch.c
main/: CMakeLists.txt  idf_component.yml  main.c  mqtt_data.h
main/esp_mqtt_client/: esp_mqtt_client.c  esp_mqtt_client.h  list_handler.c  list_handler.h  number_handler.c  number_handler.h  status_handler.c  status_handler.h
main/gatt_client/: gatt_client.c
main/ui/: CMakeLists.txt  ui.c  ui.h  ui_Screen1.c  ui_Screen1.h  ui_Screen10.c  ui_Screen10.h  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h  ui_Screen6.c  ui_Screen6.h  ui_Screen7.c  ui_Screen7.h  ui_Screen9.c  ui_Screen9.h  ui_events.c  ui_wifi_Screen.c
main/ui/fonts/: lv_font_montserrat_20.c  lv_font_montserrat_24.c  ui_font_BOLDVN60.c  ui_font_BOLDVN80.c
main/ui/images/: ui_img_green_circle_2_70x70_png.c  ui_img_red_circle_20x20_png.c  ui_img_red_circle_70x70_png.c  ui_img_turn_back2_png.c
main/user/wifi/: wifi.c  wifi.h  wifi_scan.c  wifi_sta.c
